--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SurveyorbWebsite</title>
+  <title>Survey Orb - AI-Powered Survey Platform | Transform Feedback into Insights</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Create stunning surveys in seconds with AI. Survey Orb helps you collect feedback across any channel and uncover actionable insights that drive growth at scale.">
+  <meta name="keywords" content="survey platform, AI surveys, customer feedback, employee engagement, market research, survey analytics">
+  <meta name="author" content="Survey Orb">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Survey Orb - AI-Powered Survey Platform">
+  <meta property="og:description" content="Create stunning surveys in seconds with AI. Transform feedback into actionable insights.">
+  <meta property="og:image" content="/logo.png">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Survey Orb - AI-Powered Survey Platform">
+  <meta name="twitter:description" content="Create stunning surveys in seconds with AI. Transform feedback into actionable insights.">
+  
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="logo.png">
+  
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#00C853">
+  
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <app-root></app-root>
