--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Create stunning surveys in seconds with AI. Transform feedback into actionable insights.">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
   <link rel="apple-touch-icon" href="logo.png">
   
   <!-- Theme Color -->
